add right click functionality

--- a/html/Panel.html
+++ b/html/Panel.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    Hello from my panel 1
-</body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <h1>CS50 Readability tool</h1>
+    <p>This was created as part of CS50 course final project</p>
+    <button id="evaluateArticleBtn">Evaluate Readability</button>
+    <div id="evaluation"></div>
+    <script src="/js/popup.js"></script>
+  </body>
 </html>
