WIP: trying to add react to my extension

--- a/src/legacy_panel/index.html
+++ b/src/legacy_panel/index.html
@@ -7,7 +7,14 @@
     <title>CS50: Readability Evaluation</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app">
+      <h1>CS50: Readability Evaluation</h1>
+      <div id="result">
+        <p>Number of words: <span id="word-count">0</span></p>
+        <p>Number of sentences: <span id="sentence-count">0</span></p>
+      </div>
+    </div>
+    <script src="panel.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
